syntax = "proto3";
package stwartchain.stwart;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "stwartchain/stwart/params.proto";

option go_package = "github.com/stalwart-algoritmiclab/stwart-chain-go/x/stwart/types";

// GenesisState defines the stwart module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}
